# whitelist

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: .env  file-filters.yml
.github/workflows/: build-programs.yml  build-rust-client.yml  build-verify-programs.yml  main.yml  publish-rust-client.yml  test-js-anchor.yml  test-js-client.yml  test-programs.yml  test-rust-client.yml
clients/anchor/tests/: shared.ts
clients/anchor/tests/twhitelist/: whitelist.test.ts
clients/js/: .eslintrc.cjs  .eslintrc.js  .npmrc  .prettierignore  .prettierrc.json  CONTRIBUTING.md  README.md  env-shim.ts  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/src/: helpers.ts  index.ts  plugin.ts
clients/js/test/: _common.ts  _merkle.ts  _mint.ts  _setup.ts  closeWhitelistV2.test.ts  createMintProofV2.test.ts  createNft.test.ts  createWhitelistV2.test.ts  editWhitelist.test.ts  editWhitelistV2.test.ts  freezeWhitelistV2.test.ts  initUpdateAuthority.test.ts  mintProof.test.ts  updateWhitelistV2.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs  utils.rs
clients/rust/src/hooked/: mod.rs
clients/rust/tests/: init_update_authority.rs  mint_proof_v2.rs
clients/rust/tests/setup/: mod.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/scripts/client/: test-rust.sh
configs/scripts/program/: build.sh  clean.sh  dump.sh  test.sh
examples/: common.ts  init_mint_proof_if_needed.ts  package.json
program/: Cargo.toml  idl.json
program/idl/: whitelist_program.json
program/src/: error.rs  lib.rs
program/src/instructions/: close_mint_proof_v2.rs  close_whitelist_v2.rs  create_mint_proof_v2.rs  create_whitelist_v2.rs  edit_whitelist_v2.rs  freeze_whitelist.rs  freeze_whitelist_v2.rs  init_update_authority.rs  init_update_mint_proof.rs  init_update_mint_proof_v2.rs  init_update_whitelist.rs  mod.rs  realloc_authority.rs  realloc_whitelist.rs  unfreeze_whitelist.rs  unfreeze_whitelist_v2.rs  update_whitelist_v2.rs
program/src/state/: mint_proof.rs  mint_proof_v2.rs  mod.rs  whitelist.rs  whitelist_v2.rs
programs/: Cargo.toml
programs/whitelist/: Cargo.toml  README.md
programs/whitelist/src/: error.rs  lib.rs
programs/whitelist/src/instructions/: init_update_mint_proof.rs  init_update_whitelist.rs
programs/whitelist/src/state/: authority.rs  mod.rs  whitelist.rs
scripts/: generate-clients.cjs  generate-clients.mjs  validator.cjs
scripts/client/: test-rust.mjs  test-rust.sh
scripts/program/: build.sh  clean.sh  dump.sh  test.sh
whitelist/idl/: whitelist_program.json
whitelist/src/instructions/: mod.rs  realloc_authority.rs  unfreeze_whitelist.rs
whitelist/src/state/: full_merkle_proof.rs  mint_proof.rs
