[package]
name = "whitelist-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "TL1ST2iRBzuGTqLn1KXnGdSnEow62BzPnGiqyRXhWtW"
program-dependencies = [
    "noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV",
    "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
tensor-toolbox = { version = "0.0.2", git = "ssh://git@github.com/tensor-foundation/toolbox.git", rev = "1e84508", features = [
    "cnft",
] }
mpl-token-metadata = "4.0.0"
vipers = { version = "2.0.6", git = "ssh://git@github.com/tensor-foundation/toolbox.git" }
