[package]
name = "whitelist-program"
version = "0.2.1"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "TL1ST2iRBzuGTqLn1KXnGdSnEow62BzPnGiqyRXhWtW"
program-dependencies = [
    "noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV",
    "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
    "CoREENxT6tW1HoK8ypY1SxRMZTcVPm7R94rH4PZNhX7d",
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["default"] }
mpl-token-metadata = "4.1.2"
tensor-toolbox = { version = "0.4.0", features = ["cnft"] }
tensor-vipers = { version = "1.0.1" }

[dev_dependencies]
spl-merkle-tree-reference = "0.1.0"
solana-sdk = "< 1.18"

[lints.rust]
unused_must_use = "deny"
