[package]
name = "whitelist-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version="0.29.0", features=["init-if-needed"] }
anchor-spl = "0.29.0"
merkle_proof = { version="0.1.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="85e9ba019516659ff891428ff517424474dc2cba" }
mpl-token-metadata = "4.0.0"
solana-program = "< 1.18"
vipers = { version="2.0.6", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="85e9ba019516659ff891428ff517424474dc2cba" }
